# Django-SOAP

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
django_soap/: admin.py  apps.py  models.py  urls.py
django_soap/migrations/: 0001_initial.py  0002_auto_20210807_0121.py
django_soap/templates/djangosoap/tests/: Add.xml  NumberConversion.xml  NumberToDollars.xml
django_soap/tests/: test_models.py  test_soap.py
django_soap/utils/: SOAPHandlerBase.py  __init__.py  client.py  exceptions.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: README.md  settings.py  test_models.py  urls.py
tests/example/: urls.py
